# Battleship

./: .gitignore  CMakeLists.txt  README.md  config.INI  config.json  json.hpp  main.cpp  makefile  utility.cpp
include/: cell.hpp  coordinates.hpp  ini.h  map.hpp  ship.hpp  states.hpp
lib/: enemy.cpp  enemy.h  map.cpp  map.h  projectile.cpp  projectile.h  ship.cpp  ship.h  utilityAddOns.cpp  utilityAddOns.h
src/: cell.cpp  coordinates.cpp  main.cpp  map.cpp  ship.cpp  states.cpp
